--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,5 @@
 [submodule "java-chicken-2020"]
 	path = java-chicken-2020
 	url = https://github.com/yeonnseok/java-chicken-2020.git
+	branch = bossdog
+
