--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 	branch = bossdog-chess
 
 
+[submodule "java-chicken-2020"]
+	path = java-chicken-2020
+	url = https://github.com/yeonnseok/java-chicken-2020.git
