--- a/.gitmodules
+++ b/.gitmodules
@@ -14,8 +14,7 @@
 	path = java-chess
 	url = https://github.com/yeonnseok/java-chess.git
 	branch = bossdog-chess
-
-
 [submodule "java-chicken-2020"]
 	path = java-chicken-2020
 	url = https://github.com/yeonnseok/java-chicken-2020.git
+	branch = bossdog
